--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -89,6 +89,7 @@ header>div {
   list-style: none;
   cursor: pointer;
 }
+
 .nav-bar ul li a {
   display: inline-block;
   width: 100%;
@@ -751,19 +752,19 @@ select:invalid:focus {
 /* list of services */
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   justify-content: center;
   gap: 2rem;
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
   padding: 2rem;
-  gap: 2rem;
 }
 
 .card {
   position: relative;
-  max-width: 350px;
+  width: 100%;
+  max-width: 400px;
   margin: 0 auto;
   border-radius: 10px;
   box-shadow: 0 5px 15px var(--primary);
@@ -796,8 +797,7 @@ select:invalid:focus {
 
 .card img {
   width: 100%;
-  height: auto;
-  max-height: 10rem;
+  height: 12rem;
   border-radius: 10px 10px 0 0;
 }
 
@@ -815,6 +815,10 @@ select:invalid:focus {
 
 .card__title h2 {
   margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: 1.2rem;
 }
 
 .card__title span {
@@ -825,12 +829,15 @@ select:invalid:focus {
 }
 
 .card__content p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
   font-size: 1rem;
 }
 
 .card__content p:last-child {
   margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 700;
   text-align: center;
   color: var(--primary);
