--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -10,6 +10,11 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
+h2 {
+  margin: 0;
+  font-size: 1.8rem;
+}
+
 /* header */
 header {
   position: sticky;
@@ -23,7 +28,7 @@ header>div {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  max-width: 700px;
+  max-width: 900px;
   margin: 0 auto;
   padding: 1rem;
 }
@@ -799,6 +804,7 @@ select:invalid:focus {
   width: 100%;
   height: 12rem;
   border-radius: 10px 10px 0 0;
+  object-fit: cover;
 }
 
 .card__content {
@@ -1073,6 +1079,60 @@ select:invalid:focus {
   width: 100%;
   max-width: 900px;
   margin: 2rem auto;
+}
+
+/* my events */
+.my-events {
+  width: 100%;
+  max-width: 900px;
+  margin: 2rem auto;
+}
+
+.event-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  margin: 2rem 0;
+}
+
+.event {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  /* margin: 0 auto; */
+  padding: 20px;
+  border-radius: 15px;
+  border: solid 2px var(--primary);
+  box-shadow: 0 0px 10px var(--primary);
+  text-decoration: none;
+  color: var(--black);
+}
+
+.event__header {
+  width: 60%;
+}
+
+.event__header__details {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  column-gap: 10%;
+}
+
+.event__price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.event__title {
+  display: flex;
+  font-size: 30px;
+}
+
+.span-color {
+  color: var(--primary);
 }
 
 @media (min-width: 768px) {
