Add functionality to register event

--- a/views/modules/hero.html
+++ b/views/modules/hero.html
@@ -11,14 +11,12 @@
 <body>
 
 
-
-
-
 <div class="hero-container">
   <img src="../assets/img/img hero.png" alt="Hero Image" class="hero-image">
   <div class="hero-text">
     <p>Administra tus eventos<br>con mayor facilidad y<br>sin olvidar detalles</p>
-    <button class="hero-button">Crea un evento</button>
+    <!-- <button class="hero-button">Crea un evento</button> -->
+    <a href="views/modules/new-event-form.php" target="_blank" class="create__event-button">Crea un evento</a>
   </div>
 </div>
 
