--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -126,7 +126,6 @@ header>div {
   height: 30px;
   border-radius: 20px;
   background-color: var(--primary);
-  box-shadow: 0px 0px 5px 2px #5e57e0;
 }
 
 .search-bar input {
@@ -967,24 +966,52 @@ select:invalid:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  top: 80%;
-  width: 80%;
+  top: 90%;
+  width: 75%;
+  max-width: 200px;
   margin: 0 auto;
-  padding: 0.5rem;
-  gap: 0.5rem;
+  padding: 0;
   background-color: var(--white);
-  border: 1px solid var(--primary);
-  border-radius: 10px;
+  box-shadow: 0 5px 15px var(--primary);
+  border-radius: 5px;
+}
+
+.info-service__details__price-card__events::before {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  left: calc(50% - 10px);
+  top: -20px;
+  border-bottom: var(--primary) 10px solid;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid transparent;
 }
 
 .info-service__details__price-card__events li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  gap: 0.5rem;
+  padding: 0.5rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  text-align: center;
   list-style: none;
   cursor: pointer;
+}
+
+.info-service__details__price-card__events li:hover {
+  background-color: rgba(118, 112, 230, 0.4);
+}
+
+.info-service__details__price-card__events li span {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url('../svg/plus.svg') no-repeat center/cover;
 }
 
 /* alerts */
@@ -1115,11 +1142,11 @@ select:invalid:focus {
   }
 }
 
-.create__event-button{
+.create__event-button {
   color: var(--white);
   text-decoration: none;
   border-radius: 10px;
-  background-color: var(--primary); 
+  background-color: var(--primary);
   padding: 0.630rem;
   margin-top: 15%;
   margin-left: 5%;
