feat(app): Add event options and icons

--- a/views/assets/css/normalize.css
+++ b/views/assets/css/normalize.css
@@ -224,6 +224,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
+  appearance: button;
   -webkit-appearance: button;
 }
 
@@ -324,6 +325,7 @@ textarea {
  */
 
 [type="search"] {
+  appearance: textfield;
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
