--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -1081,6 +1081,7 @@ select:invalid:focus {
 }
 
 .event {
+  position: relative;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -1090,7 +1091,7 @@ select:invalid:focus {
   border-radius: 15px;
   box-shadow: 0 5px 15px var(--primary);
   text-decoration: none;
-  color: var(--black);
+  color: var(--secondary);
 }
 
 .event__header {
@@ -1103,6 +1104,7 @@ select:invalid:focus {
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 1.5rem;
+  color: var(--black);
 }
 
 .event__header__details {
@@ -1123,11 +1125,65 @@ select:invalid:focus {
   margin: 0;
   font-weight: 600;
   font-size: 1.5rem;
+  color: var(--black);
 }
 
 .highlight-text {
   font-weight: bold;
   color: var(--primary);
+}
+
+.event__options {
+  position: absolute;
+  /* display: flex; */
+  top: 0.5rem;
+  right: 2rem;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--white);
+  box-shadow: 0 5px 15px var(--primary);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.event__options__edit, .event__options__delete {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  color: var(--black);
+  cursor: pointer;
+}
+
+.event__options__edit:hover, .event__options__delete:hover {
+  background-color: rgba(118, 112, 230, 0.4);
+}
+
+.event__options__edit span, .event__options__delete span {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+}
+
+.event__options__edit span {
+  background: url('../svg/pencil.svg') no-repeat center/cover;
+}
+
+.event__options__delete span {
+  background: url('../svg/trash.svg') no-repeat center/cover;
+}
+
+.icon-ellipsis {
+  position: absolute;
+  display: inline-block;
+  top: 0.5rem;
+  right: 0.5rem;
+  width: 24px;
+  height: 24px;
+  background: url('../svg/elipsis.svg') no-repeat center/cover;
 }
 
 @media (min-width: 768px) {
