--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -830,17 +830,18 @@ select:invalid:focus {
 
 /* gallery */
 .info-service__gallery {
-  display: grid;
-  grid-template-columns: 3fr 1fr 1fr;
-  grid-template-rows: repeat(2, minmax(130px, 2fr));
+  display: flex;
   width: 100%;
-  gap: 1rem;
+  height: 30dvh;
+  gap: 2rem;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
 }
 
 .info-service__gallery img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
+  scroll-snap-align: center;
   border-radius: 15px;
 }
 
@@ -1024,12 +1025,12 @@ select:invalid:focus {
   cursor: pointer;
   width: 30px;
   height: 30px;
-  background-image: url('../img/estrella.png'); 
+  background-image: url('../img/estrella.png');
   background-size: cover;
 }
 
-.stars input:checked ~ label {
-  background-image: url('../svg/star.svg'); 
+.stars input:checked~label {
+  background-image: url('../svg/star.svg');
 }
 
 /* Comments  */
@@ -1060,20 +1061,21 @@ select:invalid:focus {
   flex-direction: column-reverse;
 }
 
-.commentForm button{
+.commentForm button {
   background-color: var(--primary);
-    color: var(--white);
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 30%;
-    
+  color: var(--white);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 30%;
+
 }
-.comments__content textarea{
+
+.comments__content textarea {
   width: 100%;
   margin-left: 20px;
   margin-right: 20px;
@@ -1082,7 +1084,7 @@ select:invalid:focus {
   border-radius: 10px;
 }
 
-.button__container{
+.button__container {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -1091,7 +1093,7 @@ select:invalid:focus {
 
 /* Opinions*/
 
-.opinions{
+.opinions {
   width: 100%;
   max-width: 900px;
   margin: 0 auto;
@@ -1317,7 +1319,6 @@ select:invalid:focus {
     flex-direction: row-reverse;
     align-items: flex-start;
   }
-}
 
   .event-details {
     flex-direction: row-reverse;
@@ -1333,6 +1334,21 @@ select:invalid:focus {
   .event-details .cards-container {
     width: 60%;
   }
+
+  .info-service__gallery {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    grid-template-rows: repeat(2, minmax(130px, 2fr));
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .info-service__gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+  }
 }
 
 .create__event-button {
@@ -1346,44 +1362,44 @@ select:invalid:focus {
   cursor: pointer;
 }
 
-  .opinions {
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 900px;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    
+.opinions {
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border-radius: 10px;
+
 }
 
 .opinions h2 {
-    color: #333;
-    text-align: center;
+  color: #333;
+  text-align: center;
 }
 
 .opinion {
-    border: 1px solid #ddd;
-    margin-bottom: 15px;
-    padding: 15px;
-    background-color: #fff;
-    box-shadow: 0 5px 15px var(--primary);
-    border-radius: 10px;
+  border: 1px solid #ddd;
+  margin-bottom: 15px;
+  padding: 15px;
+  background-color: #fff;
+  box-shadow: 0 5px 15px var(--primary);
+  border-radius: 10px;
 
 }
 
 .usuario {
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 10px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 10px;
 }
 
 .calification {
-    color: #f39c12;
-    margin-bottom: 10px;
+  color: #f39c12;
+  margin-bottom: 10px;
 }
 
 .comment {
-    color: #777;
+  color: #777;
 }
