--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -863,14 +863,8 @@ select:invalid:focus {
 
 /* datails */
 .info-service__details {
-  display: flex;
-  gap: 1rem;
   width: 100%;
   padding: 2rem 0;
-}
-
-.info-service__details>div:first-child {
-  width: 65%;
 }
 
 .info-service__details__header {
@@ -914,18 +908,17 @@ select:invalid:focus {
 }
 
 .info-service__details__price-card {
-  position: sticky;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   display: flex;
-  top: 5rem;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  width: 30%;
-  height: 150px;
-  margin: 0 auto;
+  width: 100%;
   padding: 1rem;
-  border-radius: 15px;
-  box-shadow: 0 5px 15px var(--primary);
+  background-color: var(--white);
+  border-top: solid 1px var(--primary);
+  z-index: 100;
 }
 
 .info-service__details__price-card p {
@@ -956,6 +949,7 @@ select:invalid:focus {
   background-image: url('../svg/arrow-down.svg');
   background-position: center;
   background-size: cover;
+  transform: rotate(180deg);
 }
 
 .info-service__details__price-card__events {
@@ -963,9 +957,9 @@ select:invalid:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  top: 90%;
+  bottom: 100%;
   width: 75%;
-  max-width: 200px;
+  max-width: 220px;
   margin: 0 auto;
   padding: 0;
   background-color: var(--white);
@@ -979,11 +973,11 @@ select:invalid:focus {
   width: 1px;
   height: 1px;
   left: calc(50% - 10px);
-  top: -20px;
-  border-bottom: var(--primary) 10px solid;
+  bottom: -20px;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 10px solid transparent;
+  border-top: var(--primary) 10px solid;
+  border-bottom: transparent 10px solid;
 }
 
 .info-service__details__price-card__events li {
@@ -1349,6 +1343,51 @@ select:invalid:focus {
     height: 100%;
     object-fit: cover;
     border-radius: 15px;
+  }
+
+  .info-service__details {
+    display: flex;
+    gap: 1rem;
+    /* width: 100%;
+    padding: 2rem 0; */
+  }
+
+  .info-service__details>div:first-child {
+    width: 65%;
+  }
+
+  .info-service__details__price-card {
+    position: sticky;
+    top: 5rem;
+    bottom: auto;
+    left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 150px;
+    margin: 0 auto;
+    padding: 1rem;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px var(--primary);
+    border: none;
+    z-index: 0;
+  }
+
+    .info-service__details__price-card button span {
+      transform: rotate(0deg);
+    }
+
+  .info-service__details__price-card__events {
+    top: 90%;
+    bottom: auto;
+  }
+
+  .info-service__details__price-card__events::before {
+    top: -20px;
+    bottom: auto;
+    border-bottom: var(--primary) 10px solid;
+    border-top: 10px solid transparent;
   }
 }
 
