--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -207,11 +207,13 @@ header>div {
 }
 
 /* Hero */
-
 .hero-container {
   position: relative;
   width: 100%;
+  max-width: 900px;
   height: 60dvh;
+  margin: 0 auto;
+  border-radius: 15px;
   overflow: hidden;
 }
 
@@ -223,28 +225,38 @@ header>div {
 
 .hero-text {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  gap: 2rem;
+  margin: 0;
+  backdrop-filter: blur(2px);
   text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
   color: var(--white);
 }
 
-.hero-text p {
-  margin: 0;
-  font-size: 32px;
-  line-height: 1.5;
+.hero-text h2 {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 400px;
 }
 
 .hero-button {
-  margin-top: 20px;
   padding: 10px 20px;
   background-color: var(--primary);
   color: var(--white);
   text-decoration: none;
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 1rem;
+  font-weight: normal;
   border-radius: 10px;
   cursor: pointer;
 }
@@ -1570,17 +1582,6 @@ select:invalid:focus {
   .event__header {
     width: 60%;
   }
-}
-
-.create__event-button {
-  color: var(--white);
-  text-decoration: none;
-  border-radius: 10px;
-  background-color: var(--primary);
-  padding: 0.630rem;
-  margin-top: 15%;
-  margin-left: 5%;
-  cursor: pointer;
 }
 
 .opinions {
