--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -693,7 +693,7 @@ select:invalid:focus {
 }
 
 /* list of services */
-.cards-container {
+.cards-container, .services-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   justify-content: center;
@@ -1660,4 +1660,73 @@ select:invalid:focus {
 
 .comment {
   color: #777;
+}
+
+/* reserved services */
+.supplier__page__tittle {
+  padding: 20px;
+  text-align: center;
+  margin: auto;
+}
+
+.event__header {
+  width: 100%;
+}
+
+.service__dash__profile__pic {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-image: url('https://img.freepik.com/premium-photo/woman-front-laptop_950558-7349.jpg');
+  background-size: cover;
+}
+
+.service__dash__customer__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 5px;
+}
+
+.service__dash_card {
+  display: grid;
+  grid-template-columns: 5fr 3fr;
+  grid-template-rows: 4fr 1fr;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px var(--primary);
+  text-decoration: none;
+  color: var(--secondary);
+}
+
+.button-container {
+  grid-area: 2 / 1 / 3 / 3;
+  display: flex;
+  justify-content: space-around;
+}
+
+.button-container button {
+  margin-top: 7px;
+  padding: 5px 15px 5px 15px;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Colores a boton completar */
+#dash-customer-complete {
+  background-color: var(--primary);
+  color: var(--white);
+}
+
+/* colores a boton contacto */
+#dash-customer-contact {
+  background-color: var(--secondary);
+  color: var(--white);
 }
