--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -407,6 +407,7 @@ select:focus {
   position: fixed;
   top: 0;
   left: 0;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: rgba(218, 216, 216, 0.7);
@@ -417,13 +418,10 @@ select:focus {
 /* Estilos para el contenido del modal */
 .modal-content {
   background-color: var(--white);
-  width: 60%;
+  width: 80%;
   max-width: 600px;
-  margin: 100px auto;
-  padding-top: 10px;
-  padding-left: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
+  margin: 0 auto;
+  padding: 0 1.5rem 1.5rem;
   border-radius: 10px;
   max-height: 80%;
   overflow-y: auto;
@@ -487,13 +485,6 @@ select:focus {
   display: grid;
 }
 
-.button-filter {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-
 .button_places {
   display: flex;
   justify-content: space-around;
@@ -503,6 +494,27 @@ select:focus {
 .filter_elements {
   border-bottom: 1px solid #ccc;
   padding-bottom: 10px;
+}
+
+.filter__container-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0 0;
+}
+
+.filter__container-button button {
+  padding: 0.5rem 1rem;
+  background-color: var(--primary);
+  border-radius: 10px;
+  border: none;
+  color: var(--white);
+  cursor: pointer;
+}
+
+.filter__container-button button:hover {
+  background-color: var(--black);
+  box-shadow: 0 5px 15px var(--primary);
 }
 
 /* img lugares  */
@@ -726,7 +738,7 @@ select:invalid:focus {
   background-color: transparent;
   background-image: url('../svg/heart.svg');
   border: none;
-  z-index: 10;
+  /* z-index: 10; */
   cursor: pointer;
 }
 
@@ -985,7 +997,7 @@ select:invalid:focus {
   padding: 0;
   gap: 1.5rem;
   background-color: var(--white);
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .filter-bar li {
@@ -1621,8 +1633,9 @@ select:invalid:focus {
 
 @media (min-width: 768px) {
   .filter-bar {
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     overflow: hidden;
+    overflow-x: auto;
   }
 
   .info__service {
