app(refactor): Refactor search filters and add city dropdown

--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -486,8 +486,8 @@ select:focus {
 }
 
 .button_places {
-  display: flex;
-  justify-content: space-around;
+  /* display: flex; */
+  /* justify-content: space-around; */
   padding-bottom: 10px;
 }
 
